tests/negative/test_attrs_type.orb
fnc main () () {
    attr?? \()::((type 0)) foo;
};